# mu-ppl

./: LICENSE  README.md  pyproject.toml
examples/: canabis.py  coin.py  dice.py  dices.py  funny_bernoulli.py  gaussian.py  hmm.py  laplace.py  pi.py  plinko.py  sanity.py  shuttle.py  weird.py
mu_ppl/: __init__.py  distributions.py  inference.py
notebooks/: 1-introduction.ipynb  2-bayesian-reasoning.ipynb  ejcim24-ppl.ipynb  ejcim24-smc.ipynb  galton.csv  lics25-ppl.ipynb  pdl_coin.ipynb
