[tool.poetry]
name = "mu-ppl"
version = "0.1.0"
description = ""
authors = ["Guillaume Baudart <guillaume.baudart@inria.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.12.0"
numpy = "^1.26.4"
tqdm = "^4.66.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
