[tool.poetry]
name = "mu-ppl"
version = "0.1.0"
description = ""
authors = ["Guillaume Baudart <guillaume.baudart@inria.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"
numpy = "^1.25.2"
tqdm = "^4.66.2"
seaborn = "^0.13.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
